# rmua_2025

./: .gitignore  README.md  key.txt
basic_dev/src/basic_dev/: CMakeLists.txt  package.xml
doc/: ros_services_classification.md  ros_topics_classification.md  rules.md
drone_ws/: frames.gv
drone_ws (copy)/src/airsim_ros/: package.xml
drone_ws (copy)/src/drone_control/: CMakeLists.txt  package.xml
drone_ws (copy)/src/drone_control/src/: keyboard_control.cpp  pwm_control.cpp
drone_ws (copy)/src/navigation/: CMakeLists.txt  package.xml
drone_ws (copy)/src/navigation/launch/: local_planner.launch  navigation_tf.launch  path_planning.launch  pointcloud_process.launch
drone_ws (copy)/src/navigation/param/: global_planner.yaml  local_planner.yaml  motion_controller.yaml
drone_ws (copy)/src/navigation/rviz/: drone_navigation.rviz
drone_ws (copy)/src/navigation/src/: drone_marker.cpp  local_planner.cpp  motion_controller.cpp  path_planner.cpp  tf_broadcaster.cpp
drone_ws/src/airsim_ros/: CMakeLists.txt
drone_ws/src/drone_control/: key.txt
drone_ws/src/drone_control/include/drone_control/: keyboard_control.h
drone_ws/src/drone_control/src/: keyboard_control.cpp
drone_ws/src/navigation/: CMakeLists.txt  package.xml
drone_ws/src/navigation/launch/: drone_control.launch  ego_planner.launch  navigation_tf.launch  path_planning.launch  pointcloud_process.launch  trajectory_planner.launch
drone_ws/src/navigation/param/: drone_marker.yaml  ego_planner.yaml  pointcloud_process.yaml  position_controller.yaml  pwm_controller.yaml  trajectory_planner.yaml  voxel_grid.yaml
drone_ws/src/navigation/rviz/: drone_navigation.rviz
drone_ws/src/navigation/src/: ego_planner.cpp  gps_filter.cpp  path_planner.cpp  pointcloud_process.cpp  position_controller.cpp  pwm_controller.cpp  tf_broadcaster.cpp  tf_trans.cpp  trajectory_planner.cpp
drone_ws/src/navigation_vision/: CMakeLists.txt  README.md  package.xml
drone_ws/src/navigation_vision/config/yaml/: navigation_params.yaml  vision_params.yaml
drone_ws/src/navigation_vision/launch/: vision.launch  vision_navigation.launch
drone_ws/src/navigation_vision/msg/: Box.msg  VisionYolo.msg
drone_ws/src/navigation_vision/param/: pwm_ctrl.yaml
drone_ws/src/navigation_vision/position_fliter/: only_windows_fliter.csv  position_data_without_fliter.csv
drone_ws/src/navigation_vision/scripts/: draw_point.py  get_photo.py  yolo_deal.py  yolo_detect.py
drone_ws/src/navigation_vision/src/: get_plan.cpp  pwm_ctrl.cpp  pwm_vision.cpp
drone_ws/src/navigation_vision/yolov8/config/: yolo.yaml
scripts/: get_photo.py  topic_viewer.py  topic_viewer.py.bak  yolo_detect.py
yolov8/labels/: train.cache  val.cache
yolov8/labels/train/: 0.txt  1.txt  10.txt  12.txt  14.txt  15.txt  16.txt  17.txt  19.txt  2.txt  23.txt  27.txt  28.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  38.txt  39.txt  5.txt  7.txt  classes.txt
yolov8/labels/val/: 0.txt  11.txt  13.txt  18.txt  20.txt  21.txt  22.txt  24.txt  25.txt  26.txt  29.txt  3.txt  30.txt  37.txt  4.txt  40.txt  6.txt  8.txt  9.txt  classes.txt
yolov8/runs/rmru_train_1/: args.yaml  results.csv
yolov8/runs/rmru_train_2/: args.yaml
yolov8/runs/rmru_train_22/: args.yaml  results.csv
yolov8/yaml/: rmru.yaml
